--- a/manager0216/src/main/resources/static/pages/ProductFormat.html
+++ b/manager0216/src/main/resources/static/pages/ProductFormat.html
@@ -270,11 +270,9 @@
                                 type: 'post',
                                 dataType: "json",
                                 success: function (result) {
-                                    if (result.code === 200) {
-                                        layer.msg('修改成功');
+                                    UIConfig.postMsg(result)
+                                    if (result.successed) {
                                         layer.close(index);
-                                    }  else {
-                                        layer.msg('修改失败')
                                     }
                                 }
                             });
@@ -320,12 +318,9 @@
                                 type: 'post',
                                 dataType: "json",
                                 success: function (result) {
-                                    if (result.code === 200) {
-                                        layer.msg('新增成功');
+                                    UIConfig.postMsg(result)
+                                    if (result.successed) {
                                         layer.close(index);
-
-                                    } else {
-                                        layer.msg('新增失败')
                                     }
                                 }
                             });
@@ -354,12 +349,9 @@
                         type: 'post',
                         dataType: "json",
                         success: function (result) {
-                            if (result.code === 200) {
-                                layer.msg('删除成功');
+                            UIConfig.postMsg(result)
+                            if (result.successed) {
                                 layer.close(index);
-
-                            } else {
-                                layer.msg('删除失败')
                             }
                         }
                     });
