--- a/manager0216/src/main/resources/static/pages/gamesList.html
+++ b/manager0216/src/main/resources/static/pages/gamesList.html
@@ -187,10 +187,7 @@
                             type: 'post',
                             dataType: "json",
                             success: function (result) {
-                                if (result.code === 200) {
-                                } else {
-                                    layer.msg('查询失败')
-                                }
+                                UIConfig.postMsg(result);
                             }
                         });
                         layer.close(index);
