--- a/manager0216/src/main/resources/static/pages/wxGroupManager.html
+++ b/manager0216/src/main/resources/static/pages/wxGroupManager.html
@@ -232,7 +232,7 @@
     <div class="layui-form-item layui-hide">
         <label class="layui-form-label">ID *</label>
         <div class="layui-input-inline">
-            <input type="text" id="id" name="id" lay-verify="required" autocomplete="off"
+            <input type="text" id="id" name="id"  autocomplete="off"
                    class="layui-input layui-input">
         </div>
     </div>
@@ -246,7 +246,7 @@
     </div>
 
     <div class="layui-form-item ">
-        <label class="layui-form-label">群管理员 </label>
+        <label class="layui-form-label">群管理员 *</label>
         <div class="layui-input-inline">
             <input type="text" id="wxGroupManager" name="wxGroupManager" lay-verify="required" autocomplete="off"
                    class="layui-input layui-input">
@@ -254,7 +254,7 @@
     </div>
 
     <div class="layui-form-item ">
-        <label class="layui-form-label">群微信名 </label>
+        <label class="layui-form-label">群微信名 *</label>
         <div class="layui-input-inline">
             <input type="text" id="wxGroupName" name="wxGroupName" lay-verify="required" autocomplete="off"
                    class="layui-input layui-input">
