--- a/manager/src/main/resources/static/index.html
+++ b/manager/src/main/resources/static/index.html
@@ -59,9 +59,12 @@
 				form.render();
 				//提交
 				form.on('submit(LAY-user-login-submit)', function(obj) {
-					$.post("user/login", obj.field, function(res) {
-						layer.msg(res.msg);
-						location.href = 'pages/init.html';							
+					$.post("userLog/login", obj.field, function(result) {
+						console.log(result)
+						layer.msg(result.msg, {icon: result.code == 0 ? 1 : 2});
+						if (result.code == 0){
+							location.href = 'pages/init.html';
+						}
 					})
 				});
 			});
