--- a/manager/src/main/resources/static/pages/appConfig.html
+++ b/manager/src/main/resources/static/pages/appConfig.html
@@ -160,6 +160,7 @@
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
+                {type:'numbers',title:'序号'} ,
                 {field: 'ddname', width: 120, title: '产品名称', sort: true},
                 {field: 'originName', width: 270, title: '原始名称', sort: true},
                 {field: 'ddprogram', width: 150, title: '是否为小程序', sort: true,
