--- a/manager/src/main/resources/static/pages/gameTable.html
+++ b/manager/src/main/resources/static/pages/gameTable.html
@@ -108,14 +108,12 @@
                         contentType: "application/json; charset=utf-8",
                         type: 'post',
                         dataType: "json",
-                        success: function (res) {
-                            if (res.code === 200) {
-                                layer.msg("刷新成功");
+                        success: function (result) {
+                            UIConfig.postMsg(result);
+                            if (result.successed) {
                                 setTimeout(function () {
                                     window.location.reload();
-                                }, 800);
-                            } else {
-                                layer.msg('刷新失败，请联系管理员')
+                                }, 1000);
                             }
                         }
                     });
