--- a/manager/src/main/resources/static/pages/orders.html
+++ b/manager/src/main/resources/static/pages/orders.html
@@ -297,11 +297,9 @@
                             type: 'post',
                             dataType: "json",
                             success: function (result) {
-                                if (result.code === 200) {
-                                    layer.msg('补单成功');
+                                UIConfig.postMsg(result);
+                                if (result.successed) {
                                     layer.close(index);
-                                } else {
-                                    layer.msg('查询失败')
                                 }
                             }
                         });
