--- a/manager/src/main/resources/static/pages/roundGame.html
+++ b/manager/src/main/resources/static/pages/roundGame.html
@@ -325,11 +325,9 @@
                                 type: 'post',
                                 dataType: "json",
                                 success: function (result) {
-                                    if (result.code === 200) {
-                                        layer.msg('修改成功');
+                                    UIConfig.postMsg(result);
+                                    if (result.successed) {
                                         layer.close(index);
-                                    }  else {
-                                        layer.msg('修改失败')
                                     }
                                 }
                             });
@@ -375,14 +373,12 @@
                                 type: 'post',
                                 dataType: "json",
                                 success: function (result) {
-                                    if (result.code === 200) {
-                                        layer.msg('新增成功');
+                                    UIConfig.postMsg(result);
+                                    if (result.successed) {
                                         layer.close(index);
                                         setTimeout(function (){
                                             window.location.reload();
-                                        }, 700);
-                                    } else {
-                                        layer.msg('新增失败')
+                                        }, 1000);
                                     }
                                 }
                             });
@@ -411,12 +407,9 @@
                         type: 'post',
                         dataType: "json",
                         success: function (result) {
-                            if (result.code === 200) {
-                                layer.msg('删除成功');
+                            UIConfig.postMsg(result);
+                            if (result.successed) {
                                 layer.close(index);
-
-                            } else {
-                                layer.msg('删除失败')
                             }
                         }
                     });
