--- a/manager/src/main/resources/static/pages/wxAddShow.html
+++ b/manager/src/main/resources/static/pages/wxAddShow.html
@@ -151,6 +151,7 @@
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
+                {type:'numbers',title:'序号' } ,
                 {field: 'productName', width: 120, title: '产品名称', sort: true},
                 {field: 'ddappid', width: 180, title: 'appId', sort: true},
                 {field: 'local', width: 120, title: '资源图', sort: true},
