--- a/manager/src/main/resources/static/pages/wxConfig.html
+++ b/manager/src/main/resources/static/pages/wxConfig.html
@@ -74,7 +74,7 @@
 </script>
 
 <script>
-    var operatorurl = '../manage/wxconfig';
+    const operatorurl = '../manage/wxconfig';
     layui.use(['table', 'laydate', 'form', 'layer', 'upload', 'flow'], function () {
         var table = layui.table,
             form = layui.form,
@@ -137,6 +137,7 @@
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
+                {type:'numbers',title:'序号'  } ,
                 {field: 'productName', width: 120, title: '产品名称', sort: true},
                 {field: 'ddappid', width: 180, title: 'appId', sort: true },
                 {field: 'ddappsecret', width: 120, title: 'appSecret', sort: true,hide:true},
@@ -145,11 +146,11 @@
                 {
                     field: 'programType', width: 120, title: '小程序类型', sort: true,
                     templet: (d) => {
-                        if (d.programType == 1) {
+                        if (d.programType === 1) {
                             return '小程序';
-                        } else if (d.programType == 0) {
+                        } else if (d.programType === 0) {
                             return '小游戏';
-                        } else if (d.programType == 2) {
+                        } else if (d.programType === 2) {
                             return '公众号';
                         } else
                             return '其他';
@@ -171,7 +172,6 @@
                     sort: true,
                     templet: function (d) {
                         //return  "<img src='"+datum.formatUrl(d.url)+"' style='height:50px;'";
-
                         return '<a href="' + d.jumpDirect + '" target="_blank " title="点击查看">' +
                             '<img lay-src="' + d.jumpDirect + '" style="max-width: 100px;line-height:100px!important;"/>' +
                             '</a>';
@@ -207,13 +207,12 @@
                         type: 'post',
                         dataType: "json",
                         success: function (res) {
-                            if (res.code === 200) {
-                                layer.msg("刷新成功");
-                                setTimeout(function () {
+                            UIConfig.postMsg(result);
+                            if (result.successed) {
+                                layer.close(index);
+                                setTimeout(function (){
                                     window.location.reload();
-                                }, 800);
-                            } else {
-                                layer.msg('刷新失败，请联系管理员')
+                                }, 1000);
                             }
                         }
                     });
